--- a/staff/anna-cuenca/project/app/src/index.css
+++ b/staff/anna-cuenca/project/app/src/index.css
@@ -222,12 +222,13 @@
     /* Aquí se usa rounded-b-lg para redondear solo bordes inferiores */
     @apply h-[700px];
     @apply bg-zinc-50;
+
     /* O un valor específico como h-[500px] */
     /* Quita márgenes y padding si es necesario para alinear con el .custom-header */
   }
 
   .h2-robotic {
-    @apply text-center font-press-start text-xs;
+    @apply text-center font-press-start text-sm;
     margin-bottom: 40px;
     margin-top: 20px;
   }
@@ -303,10 +304,10 @@
     /* Centra la cuadrícula verticalmente */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
-    @apply bg-blue-900;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    @apply bg-zinc-200;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
     margin-top: 10px;
   }
 
@@ -326,42 +327,462 @@
   }
 
   .button-forward {
-    @apply bg-zinc-50 hover:bg-green-400 cursor-pointer;
+    @apply bg-blue-900 hover:bg-green-400 cursor-pointer;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+    margin-top: 5px;
 
   }
 
   .button-backward {
-    @apply bg-zinc-50 hover:bg-green-400 cursor-pointer;
+    @apply bg-blue-900 hover:bg-green-400 cursor-pointer;
     clip-path: polygon(50% 100%, 0% 0%, 100% 0%);
     grid-column: 2 / 3;
     grid-row: 3 / 4;
+    margin-bottom: 5px;
   }
 
   .button-right {
-    @apply bg-zinc-50 hover:bg-green-400 cursor-pointer;
+    @apply bg-blue-900 hover:bg-green-400 cursor-pointer;
     clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
     grid-column: 3 / 4;
     grid-row: 2 / 3;
   }
 
   .button-left {
-    @apply bg-zinc-50 hover:bg-green-400 cursor-pointer;
+    @apply bg-blue-900 hover:bg-green-400 cursor-pointer;
     clip-path: polygon(0% 50%, 100% 0%, 100% 100%);
     grid-column: 1 / 2;
     grid-row: 2 / 3;
   }
 
   .button-stop {
-    @apply bg-green-400 hover:bg-zinc-50 cursor-pointer;
+    @apply bg-green-400 hover:bg-red-600 cursor-pointer;
 
     padding: 20px 20px;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
 
+  }
+
+  .comunication-buttons {
+    display: flex;
+    /* Activa Flexbox */
+    justify-content: center;
+    /* Centra los elementos horizontalmente */
+    align-items: center;
+    /* Centra los elementos verticalmente (útil si tienen diferentes alturas) */
+    flex-wrap: wrap;
+    /* Permite que los elementos se envuelvan en múltiples líneas si no caben */
+    margin-bottom: 10px;
+    margin-top: 5px;
+  }
+
+  .button-sayHi {
+    @apply bg-blue-900 text-white hover:bg-green-400 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-clearLCD {
+    @apply bg-blue-900 text-white hover:bg-green-400 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .movement-buttons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /* Mantiene 3 columnas */
+    gap: 5px;
+    /* Reduce el espacio entre botones */
+    padding: 5px;
+    /* Reduce el espacio alrededor de la cuadrícula */
+    margin-right: 6px;
+  }
+
+  .button-jump,
+  .button-snakeMove,
+  .button-moonwalker,
+  .button-crusaito,
+  .button-swing,
+  .button-upDown,
+  .button-kickLeft,
+  .button-noGravity,
+  .button-shakeLegRight,
+  .button-shakeLegLeft,
+  .button-endSequence,
+  .button-showSequence {
+    @apply text-xs;
+    /* Reduce el tamaño de fuente para que el texto ocupe menos espacio */
+    padding: 5px 10px;
+    /* Reduce el relleno para disminuir el tamaño del botón */
+    margin: 0;
+    /* Ajusta los márgenes si es necesario */
+    min-width: 0;
+    /* Asegura que el botón no tenga un ancho mínimo que pueda causar desbordamiento */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+    /* Opcional: ajusta la sombra para un efecto más sutil */
+  }
+
+  .button-jump {
+    @apply bg-green-400 text-white hover:bg-blue-900 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-snakeMove {
+    @apply bg-green-400 text-white hover:bg-blue-900 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-moonwalker {
+    @apply bg-green-400 text-white hover:bg-blue-900 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-crusaito {
+    @apply bg-green-400 text-white hover:bg-blue-900 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+
+  .button-swing {
+    @apply bg-green-400 text-white hover:bg-blue-900 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-upDown {
+    @apply bg-green-400 text-white hover:bg-blue-900 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-kickLeft {
+    @apply bg-green-400 text-white hover:bg-blue-900 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-noGravity {
+    @apply bg-green-400 text-white hover:bg-blue-900 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-shakeLegRight {
+    @apply bg-green-400 text-white hover:bg-blue-900 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-shakeLegLeft {
+    @apply bg-green-400 text-white hover:bg-blue-900 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-endSequence {
+    @apply bg-green-400 text-white hover:bg-blue-900 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-showSequence {
+    @apply bg-green-400 text-white hover:bg-blue-900 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .sequences-popup {
+    @apply bg-blue-900 shadow-md rounded-lg border-4 border-blue-900;
+    /* Ajusta la redondez de los bordes para el popup */
+    @apply bg-blue-900 text-white;
+
+    /* Mantiene el color de fondo igual que .home-container */
+    @apply max-w-md m-auto p-4;
+    /* Centra el popup y aplica padding */
+    position: fixed;
+    /* Posición fija para que el popup sea modal */
+    top: 49%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* Centrado exacto en la pantalla */
+    z-index: 20;
+    /* Asegura que el popup se muestre por encima de otros elementos */
+    overflow-y: auto;
+    /* Permite el desplazamiento si el contenido excede la altura del popup */
+    max-height: 90vh;
+    /* Limita la altura del popup para asegurar que no se salga de la pantalla */
+    @apply h-[650px];
+  }
+
+  .edit-buttons {
+    @apply flex flex-row justify-around;
+
+
+    margin-top: 5px;
+    /* Alinea los botones de editar en línea */
+  }
+
+  .button-playSequence {
+    @apply bg-green-400 text-white hover:bg-zinc-50 hover:text-blue-900 cursor-pointer;
+  }
+
+  .button-deleteSequence {
+    @apply bg-green-400 text-white hover:bg-zinc-50 hover:text-blue-900 cursor-pointer;
+  }
+
+  .button-editSequence {
+    @apply bg-green-400 text-white hover:bg-zinc-50 hover:text-blue-900 cursor-pointer;
+  }
+
+  .button-hideSequences {
+    @apply bg-green-400 text-white hover:bg-zinc-50 hover:text-blue-900 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+  }
+
+  /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+
+  .h1-robotic-controller {
+    @apply text-center font-press-start text-xs;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  .button-deleteMovement {
+    @apply bg-blue-900 text-white hover:bg-green-400 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-upMovement {
+    @apply bg-blue-900 text-white hover:bg-green-400 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .button-downMovement {
+    @apply bg-blue-900 text-white hover:bg-green-400 hover:text-zinc-50 cursor-pointer;
+    padding: 10px 20px;
+    /* Ajusta el relleno según tus necesidades */
+    border: none;
+    /* Remueve cualquier borde predeterminado */
+    border-radius: 5px;
+    /* Añade bordes redondeados si lo deseas */
+
+    /* Añade sombra para dar profundidad */
+    transition: background-color 250ms, color 250ms;
+    margin-left: 10px;
+
+    /* Asegúrate de que el texto o ícono en el botón de stop esté centrado */
+
+  }
+
+  .h3-robotic-controller {
+    @apply text-center font-press-start text-xs;
+    margin-bottom: 10px;
+    margin-top: 20px;
+  }
+
+  .edit-movements {
+    @apply flex flex-row justify-around;
+
+
+    margin-top: 5px;
+    /* Alinea los botones de editar en línea */
   }
 
   /* Feedback modifications for a cohesive look */
